--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -5,8 +5,6 @@ $\\[0.5cm]$
 \noindent 
 \begin{center}
 \begin{tabular}{ l c l }
-   ADC & = & Analog-to-Digital Converter \\
-   AIS & = & Automatic Identification System \\
    ASV & = & Autonomous Surface Vehicle \\
    CNN & = & Convolutional Neural Net \\
    CCD & = & Charge Coupled Device \\
@@ -16,16 +14,17 @@ $\\[0.5cm]$
    RPS & = & Rotations Per Second \\
    ROS & = & Robot Operating System \\
    HDMI & = & High Definition Multimedia Interface \\
+   NTNU & = & Norwegian University of Science and Technology\\
+   ITK & = & Institute for Engineering Cybernetics\\
    OS & = & Operating System \\
    USB & = & Universal Serial Bus \\
    IP & = & Internet Protocol \\
    TCP & = & Transmission Control Protocol \\
-   NMEA & = & National Marine Electronics Association\\
    CPU & = & Central Processing Unit\\
    GB & = & Gigabyte \\
    RAM & = & Random Access Memory \\
    HDD & = &  Hard Disk Drive \\
-   FPGA & = & Field Programmable Gate Array
+   nm & = & Nanometer
 \end{tabular}
 \end{center}
 \clearpage
@@ -38,9 +37,11 @@ $\\[0.5cm]$
 	\begin{tabular}{ l c l }
 		$\mathcal{R}_a^b$ & = & Rotation matrix from coordinate systems $a$ to $b$\\
 		$\overrightarrow{OP}$ & = & Coordinate-free vector from point $O$ to point $P$\\
-		$\mathbf{M}$ & = & A matrix\\
+		$\mathbf{M}$ & = & Bold capital letters represent a matrix\\
+		$\mathbf{m}$ & = & Bold small letters represent a vector\\
 		$\mathbf{p}^a$ & = & A coordinate vector, $\mathbf{p}$ decomposed in the $a$ coordinate frame\\
-		$t_{ab}^a$ & = & A translation vector from frame $b$ to frame $a$, decomposed in frame $a$
+		$\mathbf{t}_{ab}^a$ & = & A translation vector from frame $b$ to frame $a$, decomposed in frame $a$\\
+		$a$ & = & A scalar
 	\end{tabular}
 \end{center}
 \cleardoublepage
