--- a/appendix.tex
+++ b/appendix.tex
@@ -124,7 +124,7 @@ Once $k_1$ and $k_2$ are estimated, equation \ref{eq:max_likelihood_calib} can b
 \label{eq:max_likelihood_distorted}
     \sum_{j=1}^{n}\sum_{i=1}^{m}||\mathbf{m}_{ij}-\mathbf{\check{m}}(\mathbf{A},k_1,k_2,\mathcal{R}_i,\mathbf{t}_i,\mathbf{M}_j)||^2
 \end{equation}
-where $\mathbf{\check{m}}(\mathbf{A},k_1,k_2,\mathcal{R}_i,\mathbf{t}_i,\mathbf{M}_j)$ is the projection of the point $\mathbf{M}_j$ in image $j$ according to equation \ref{eq:homography}, followed by distortion according to equations \ref{eq:dist_u} and \ref{eq:dist_v}. This is a nonlinear minimization problem, which is solved by the Levenberg-Marquardt algorithm\todo{kilde på dette?}. This requires an initial guess for $\mathbf{A}$ and $\mathcal{R}_i,\mathbf{t}_i,\; i=1\dots n$ which can be obtained by solving equation \ref{eq:analytic_calib}. $k_1$ and $k_2$ can be estimated by solving \ref{eq:lin_leastsquares}, or simply set to 0 initially \cite{zhangTech}. Typically, the rotation matrix $\mathcal{R}$ returned from this procedure will not be a true rotation matrix (where the rows and columns are orthogonal unit vectors) due to image noise. A method for estimating the best rotation matrix from a general $3\times3$ matrix is given in \cite{zhangTech}.
+where $\mathbf{\check{m}}(\mathbf{A},k_1,k_2,\mathcal{R}_i,\mathbf{t}_i,\mathbf{M}_j)$ is the projection of the point $\mathbf{M}_j$ in image $j$ according to equation \ref{eq:homography}, followed by distortion according to equations \ref{eq:dist_u} and \ref{eq:dist_v}. This is a nonlinear minimization problem, which is solved by the Levenberg-Marquardt algorithm. This requires an initial guess for $\mathbf{A}$ and $\mathcal{R}_i,\mathbf{t}_i,\; i=1\dots n$ which can be obtained by solving equation \ref{eq:analytic_calib}. $k_1$ and $k_2$ can be estimated by solving \ref{eq:lin_leastsquares}, or simply set to 0 initially \cite{zhangTech}. Typically, the rotation matrix $\mathcal{R}$ returned from this procedure will not be a true rotation matrix (where the rows and columns are orthogonal unit vectors) due to image noise. A method for estimating the best rotation matrix from a general $3\times3$ matrix is given in \cite{zhangTech}.
 \subsection{Calibration Procedure}
 In Zhang's paper, the recommended calibration procedure is summarized as \cite{flexCal}:
 \begin{enumerate}
