--- a/chapter1.tex
+++ b/chapter1.tex
@@ -9,7 +9,7 @@ Substantial research has been conducted into the field of remote sensing and dat
 \begin{itemize}
 	\item Stiller et al. \cite{STILLER2000389} in 2000 proposed a multisensor concept with a variety of different sensor technologies with widely overlapping fields of view for an autonomous, unsupervised vehicle. They used stereo vision, laser scanners, radar, and short range radar, combined by sensor fusion into a joint obstacle map. The research was conducted as a part of the German project \textit{Autonomes Fahren}.
 	
-	\item Mälich et al. \cite{sensorfusion_spatio_temporal} used low-level fusion of multibeam lidar and vision sensor into a detection and tracking framework. They used a cascaded AdaBoost (adaptive boosting \cite{machine_learning}) detector based on haar-wavelet like features \cite{CValg}. Lidar returns were used to generate regions of interest in the images.
+	\item Mälich et al. \cite{sensorfusion_spatio_temporal} used low-level fusion of multibeam lidar and vision sensor into a detection and tracking framework. They used a cascaded AdaBoost (adaptive boosting \cite{machine_learning}) detector based on haar-wavelet like features \cite{CValg} for the vision system. Lidar returns were used to generate regions of interest in the images.
 	
 	\item Aufrère et al. \cite{Aufrere} at the NavLab group at Carnegie Mellon University proposed a high level fusion approach for object tracking using cameras and lidars for autonomous vehicles in cluttered urban environments. Their approach used a map-based fusion system, with a probability-based predictive model.
 	
@@ -20,12 +20,21 @@ Substantial research has been conducted into the field of remote sensing and dat
 	\item Weigel et al. \cite{weigel_vehicle_tracking} demonstrated a vehicle tracking and lane detection multi-sensor system, using a lidar and a monocular camera. Detected vehicles are tracked and managed by a multi-object extended Kalman filter using the data from the lidar and the camera. The lidar was used to create appropriate regions of interest in the image plane, and subsequently the measurements in the image plane was incorporated into the Kalman filter.
 \end{itemize}
 
-There is also substantial research done for making autonomous vessels possible. Two examples which focus on the sensing and perception aspect of such systems are given below.
+There has also been done substantial research towards making autonomous vessels possible. Two examples which focus on the sensing and perception aspect of such systems are given below.
 \begin{itemize}
-	\item Wolf et al. \cite{ROB:ROB20371} describe the perception and planning systems of an autonomous surface vehicle with the goal to detect and track other vessels at medium to long ranges. They employ a NASA JPL developed tightly integrated system termed CARACaS (Control Architecture for Robotic Agent Command and Sensing) that blends the sensing, planning and behaviour autonomy necessary for such missions. In their paper, they presents an autonomy system that detects and tracks vessels of a defined class while patrolling near fixed assets. The sensor suite includes a wide-baseline stereo vision system for close-up perception and navigation, and a 360 degree camera head for longer range detection, identification, and tracking. The perception system termed SAVAnT (Surface Autonomous Visual Analysis and Tracking) receives sensory input from 6 cameras, stabilized by INS pose, detects objects of interest and calculates absolute bearings for each contact. The applications discussed in the paper is of a military nature.
-	\item Elkins et al. \cite{ROB:ROB20367} published a paper on the Autonomous Maritime Navigation project, with the stated goal of creating a set of sensors, hardware, and software that enables autonomy on unmanned surface vehicle (USV) platforms. The sensor suite includes cameras, radar, lidar, compass and GPS, integrated into a sensor fusion engine. Fusion algorithms are used to compile and correlate these data into a common tactical picture for the USV. In their paper, they showed the benefits of using a lidar for close-range detections over more long-range sensors such as radars. They also showed that the wavelength of the lasers in the lidar is such that the radiated energy does not reflect well of the water surface, i.e. most points returned are not water, making it well suited in the detection of obstacles.
+	\item Wolf et al. \cite{ROB:ROB20371} describe the perception and planning systems of an autonomous surface vehicle with the goal to detect and track other vessels at medium to long ranges. They employ a NASA JPL developed tightly integrated system termed CARACaS (Control Architecture for Robotic Agent Command and Sensing) that blends the sensing, planning and behaviour autonomy necessary for such missions. In their paper, they presents an autonomy system that detects and tracks vessels of a defined class while patrolling near fixed assets. The sensor suite includes a wide-baseline stereo vision system for close-up perception and navigation, and a 360 degree camera head for longer range detection, identification, and tracking. The perception system termed SAVAnT (Surface Autonomous Visual Analysis and Tracking) receives sensory input from 6 cameras, stabilized by INS pose, detects objects of interest and calculates absolute bearings for each contact.
+	\item Elkins et al. \cite{ROB:ROB20367} published a paper on the Autonomous Maritime Navigation project, with the stated goal of creating a set of sensors, hardware, and software that enables autonomy on unmanned surface vehicle (USV) platforms. The sensor suite includes cameras, radar, lidar, compass and GPS, integrated into a sensor fusion engine. Fusion algorithms are used to compile and correlate these data into a common tactical picture for the USV. In their paper, they showed the benefits of using a lidar for close-range detections over more long-range sensors such as radars. They also argued that the wavelength of the lasers in the lidar is such that the radiated energy does not reflect well of the water surface, i.e. most points returned are not water, making it well suited in the detection of obstacles.
 \end{itemize} 
-
+Previous research into fusion of camera and lidar show that the two sensors have complimentary characteristics, making them good candidates to be used in a perception system for an autonomous vessel. The results presented by Elkins et al. show that a lidar is well suited for close-range sensing and detection for an ASV operating in urban environments.
+\section{Objective}
+The objective of this project is to prepare the processing pipeline leading up to a sensor fusion and tracking system for an ASV. The tasks include 
+\begin{itemize}
+	\item Installation and recording of time-synchronized data from a Velodyne lidar and a camera
+	\item Calibration of both sensors, including specification of geometric models for both sensors, relating the world reference frame to the sensor frame
+	\item Implement a detector based on a convolutional neural network (CNN) for detection of boats in camera data
+	\item Implement a detector based on the reflected signal from the lidar
+	\item An analysis comparing the detections between each sensor
+\end{itemize}
 \section{Report outline}
 This report is divided into seven chapters. Following the introduction, background theory is presented in chapter 2. The geometric sensor models for the camera and the lidar, which is a prerequisite for sensor fusion, is presented in chapter 3. Chapter 4 presents some of the implementation details, the software and hardware used in the data collection and analysis, and the calibration procedure used for the camera. In chapter 5, the experiments performed in this project are presented, as well as the location used. In chapter 6, the results are presented and discussed. Chapter 7 presents the conclusion of the project, and suggests further work.
 
