--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 %%The title page will be automatically generated and added by the DAIM system
 \input{frontpage.tex}
 \input{problemdescription.tex}
-\input{dedication.tex}		%% Optional
+%\input{dedication.tex}		%% Optional
 
 %% PART 2
 \input{summary.tex}		%% Optional
@@ -27,7 +27,7 @@
 \input{chapter4.tex}
 \input{chapter5.tex}
 \input{chapter6.tex}
-\input{chapter7.tex}
+%\input{chapter7.tex}
 \input{chapter8.tex}
 %% PART 4
 %\input{references.tex}	%% Edit your references in "mylib.bib"
