--- a/mylib.bib
+++ b/mylib.bib
@@ -624,7 +624,87 @@ publisher = {Curran Associates, Inc.},
 	isbn = {354023957X},
 	publisher = {Springer-Verlag New York, Inc.},
 	address = {Secaucus, NJ, USA},
-} 
+}
 
+@inproceedings{imagenet_cvpr09,
+	AUTHOR = {Deng, J. and Dong, W. and Socher, R. and Li, L.-J. and Li, K. and Fei-Fei, L.},
+	TITLE = {{ImageNet: A Large-Scale Hierarchical Image Database}},
+	BOOKTITLE = {CVPR09},
+	YEAR = {2009},
+}
+@article{voc,
+	title= {Visual Object Classes Challenge 2012 Dataset (VOC2012)},
+	journal= {},
+	author= {Everingham, M. and Van~Gool, L. and Williams, C. K. I. and Winn, J. and Zisserman, A.},
+	year= {2012},
+	url= {http://host.robots.ox.ac.uk/pascal/VOC/voc2012/},
+	keywords= {VOC},
+	terms= {},
+}
+
+@Article{LeCun2015deepL,
+	author={LeCun, Yann
+	and Bengio, Yoshua
+	and Hinton, Geoffrey},
+	title={Deep learning},
+	journal={Nature},
+	year={2015},
+	month={May},
+	day={27},
+	publisher={Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved. SN  -},
+	volume={521},
+	pages={436 EP  -},
+}
+	@INPROCEEDINGS{7500585, 
+	author={D. Laneuville and A. Nègre and P. Dufour}, 
+	booktitle={2016 IEEE Aerospace Conference}, 
+	title={4D Cartesian state estimation of sea surface targets with a single camera}, 
+	year={2016}, 
+	volume={}, 
+	number={}, 
+	pages={1-9}, 
+	ISSN={}, 
+	month={March},}
+	
+	@inproceedings{furgale_iros13,
+	year = { 2013 },
+	title = { Unified Temporal and Spatial Calibration for Multi-Sensor Systems },
+	pages = { 1280--1286 },
+	month = { 3--7 November },
+	booktitle = { Proceedings of the IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) },
+	author = { Paul Furgale and Joern Rehder and Roland Siegwart },
+	address = { Tokyo, Japan },
+	}
+	
+	@article{DBLP:journals/corr/DhallCRK17,
+	author    = {Ankit Dhall and
+	Kunal Chelani and
+	Vishnu Radhakrishnan and
+	K. M. Krishna},
+	title     = {LiDAR-Camera Calibration using 3D-3D Point correspondences},
+	journal   = {CoRR},
+	volume    = {abs/1705.09785},
+	year      = {2017},
+	url       = {http://arxiv.org/abs/1705.09785},
+	archivePrefix = {arXiv},
+	eprint    = {1705.09785},
+	}
+	@Inbook{Wilthil2017,
+	author="Wilthil, Erik F.
+	and Fl{\aa}ten, Andreas L.
+	and Brekke, Edmund F.",
+	editor="Fossen, Thor I.
+	and Pettersen, Kristin Y.
+	and Nijmeijer, Henk",
+	title="A Target Tracking System for ASV Collision Avoidance Based on the PDAF",
+	bookTitle="Sensing and Control for Autonomous Vehicles: Applications to Land, Water and Air Vehicles",
+	year="2017",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="269--288",
+	abstract="Safe navigationNavigation         and guidance of an autonomous surface vehicle (ASV)           Autonomous Surface Vehicles (ASV) depends on automatic sensor fusion methods capable of discovering static and moving obstacles in the vicinity of the ASV. A key component in such a system is a method for target trackingTarget tracking        . In this paper, we report a complete radar tracking system based on the classical probabilistic data associationProbabilistic data association         filter (PDAF)                  PDAF                . The tracking system is tested on real radar data recorded in Trondheimsfjorden, Norway.",
+	}
+	
+	
 }
 %</bibtex>
