--- a/preface.tex
+++ b/preface.tex
@@ -2,6 +2,8 @@
 \addcontentsline{toc}{chapter}{Preface}
 $\\[0.5cm]$
 
-\noindent This project report presents the work for the mandatory course \textit{TTK4551}, taken during the fall of 2017. The course counts for 7.5 credit points of the two-year master's programme in cybernetics and robotics.
+\noindent This project report presents the work for the mandatory course \textit{TTK4551}, taken during the fall of 2017. While the project has been time consuming and challenging, it has rewarded me with much knowledge, and a deep motivation to pursue the problem further during my Masters thesis.
+
+I would like to thank my supervisors, Edmund F\o rland Brekke and Geir Hamre, for their input, knowledge and support throughout the project. I would also like to thank Bj\o rn-Olav Holtung Eriksen and Andreas Lindahl Flåten, for lending their time and support (and their boat) during the data collection phase of the project. Lastly, I would also like to thank Stefano Bertelli, Gunnar Aske, and all the people at the ITK workshop, for always being helpful in times of need.
 
 \cleardoublepage
