--- a/problemdescription.tex
+++ b/problemdescription.tex
@@ -15,7 +15,7 @@
 $\\[0.5cm]$
 
 \noindent
-The goal of the specialization project is to prepare the processing pipeline leading to camera-lidar fusion. A comparison of detections of interesting objects in the camera data with interesting objects in the lidar data will be performed, and suitable detection models for camera and lidar will be analyzed \todo{Hvis tid}.\smallskip \\
+The goal of the specialization project is to prepare the processing pipeline leading to camera-lidar fusion. A comparison of detections of interesting objects in the camera data with interesting objects in the lidar data will be performed.\smallskip \\
 The following subtasks are proposed for the project:
 \begin{enumerate}
 	\item Installation of Velodyne lidar together with camera, and recording of time-synchronized data from both sensors.
