--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,16 +1,16 @@
 %===================================== CHAP 5 =================================
 
-\chapter{Experiments}
+\chapter{Experiments and Data Collection}
 In order to get data to analyse and evaluate the proposed methodology, a series of experiments was performed using a small boat in the channel near Ravnkloa in Trondheim. The sensors were mounted on a rigid mount, and the boat performed a series of maneuvers in front of the sensors, in order to gather sensor data to be post-processed and analyzed. The data was saved in rosbags during the experiments, to be post-processed in ROS and MATLAB after the data gathering.
-The experiments were performed at Ravnkloa in the Nidelven river in Trondheim. This location was chosen due to easy access to the waterfront via a floating dock and access to electrical power outlets for the sensors and computer, courtesy of the Trondheim harbor authorities (Trondheim Havn). Figure \ref{fig:trondheim_sentrum} shows the experimental site in a satellite photo of downtown Trondheim. The circle in figure \ref{fig:trondheim_sentrum} illustrates the area where the boat maneuvers were performed, and the arrow illustrates where the sensors were placed.
-\begin{figure}[H]
+The experiments were performed at Ravnkloa in the harbor channel in Trondheim. This location was chosen due to easy access to the waterfront via a floating dock and access to electrical power outlets for the sensors and computer, courtesy of the Trondheim harbor authorities (Trondheim Havn). Figure \ref{fig:trondheim_sentrum} shows the experimental site in a satellite photo of downtown Trondheim. The circle in figure \ref{fig:trondheim_sentrum} illustrates the area where the boat maneuvers were performed, and the arrow illustrates where the sensors were placed.
+\begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/trondheim_downtown.png}
 	\caption{The experiment site in downtown Trondheim. Image taken from Google Maps.}
 	\label{fig:trondheim_sentrum}
 \end{figure}
 The sensors were mounted on a simple rig custom made for the purpose by the workshop at NTNU ITK. Figure \ref{fig:sensors_ravnkloa} shows the sensors mounted on the rig, and the placement of the rig at the end of the floating dock at Ravnkloa.
-\begin{figure}[H]
+\begin{figure}[!htb]
 	\centering
 	\begin{subfigure}[t]{.5\textwidth}
 		\centering
@@ -29,7 +29,7 @@ The sensors were mounted on a simple rig custom made for the purpose by the work
 \end{figure}
 The target boat used in the experiments is a 5.18 meters (17 imperial feet) long  leisure craft, owned by two PhD students at NTNU.
 The boat is shown in figure \ref{fig:boat} (the blue boat). The relative small size of the boat makes it a good test target for the proposed system, as detection of small leisure crafts will be important from a safety standpoint when an autonomous vessel is maneuvering in confined environments and close to shore, where such crafts are typically found.
-\begin{figure}
+\begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.5\linewidth]{fig/experiment_boat.jpg}
 	\caption{The boat used as a target in the experiments.}
@@ -37,7 +37,7 @@ The boat is shown in figure \ref{fig:boat} (the blue boat). The relative small s
 \end{figure}
 \section{Performed Maneuvers}
 In order to be able to compare detections in images with data from the lidar, and to gain insight into how well image detections of the boat corresponds to detections in the lidar point cloud, a series of maneuvers with different geometries were performed in the river around the sensor placement. Figure \ref{fig:experiments} illustrates the recorded maneuvers.
-\begin{figure}[H]
+\begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/experiments_performed.png}
 	\caption{The recorded maneuvers overlaid a satellite image of Ravnkloa. Satellite image taken from Google maps.}
@@ -53,5 +53,5 @@ The maneuvers, with reference to the indices in figure \ref{fig:experiments}, we
 	\item Boat crossing in front of sensors, passing at a distance of 45 to 65 meters. Speed approximately 1 meter/second.
 	\item Boat driving in circles in front of sensors, with a radius of approximately 10 meters, centered at a distance of 25 meters from the sensors. This provides a full 360$\degree$ view of the boat.
 \end{enumerate}
-The increased speed in experiment 6 was an attempt to generate wakes, in order to analyse the effects of wakes in the lidar data, as well as testing how detection in images compare to detections in the lidar data for a faster moving target. The imposed speed limit on the Nidelven river is 5 knots, or 2.57 meters/second, so this pass was close to the legal speed limit on the river. For all experiments, lidar data was stored as a point cloud with a update frequency of 10 Hz, while images was stored at a frame rate of 25 Hz.
+The increased speed in experiment 5 was an attempt to generate wakes, in order to analyse the effects of wakes in the lidar data, as well as testing how detection in images compare to detections in the lidar data for a faster moving target. The imposed speed limit in the channel is 5 knots, or 2.57 meters/second, so this pass was close to the legal speed limit. For all experiments, lidar data was stored as a point cloud with a update frequency of 10 Hz, while images was stored at a frame rate of 25 Hz.
 \cleardoublepage
